//
// Copyright 2014 Midokura SARL
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

package org.midonet.cluster.data.storage;
option java_package = "org.midonet.cluster.data.storage";
option java_outer_classname = "StorageEval";

message EvalResult {
    optional string timestamp = 1;
    message TestItem {
        optional string item_name = 1;
        enum TestStatus {
            SUCCESS = 1;
            FAILURE = 2;
        }
        optional TestStatus test_status = 2;

        message TestData {
            optional string property = 1;
            optional string value = 2;
            optional int64 latency_milli_sec = 3;
        }
        repeated TestData data = 3;
    }
    repeated TestItem test_item = 2;
}

message BulkUpdateEval {
    optional string id = 1;
    optional string name = 2;
    enum Type {
        LOCAL_ZK_ZOOM = 1;
    }
    optional Type type = 3;
    optional int32 num_threads = 4;
    optional int32 trial_size = 5;
    optional int32 multi_size = 6;

    message Topology {
        optional int32 num_tenants = 1;
        optional int32 networks_per_tenant = 2;
        optional int32 ports_per_network = 3;
        optional int32 num_rules_per_network_chains = 4;
    }
    optional Topology topology = 7;

    repeated EvalResult result = 8;
}